<resources>
    <!-- 网络框架中网络异常相关描述 -->
    <string name="net_error_check">网络错误</string>
    <string name="net_error_timeout">网络连接超时</string>
    <string name="net_error_noConnection">网络未连接</string>
    <string name="net_error_ununited">服务器错误</string>
    <string name="net_error_login_timeout">登录超时</string>
    <string name="net_token_error">用户登录已过期，请重新登录！</string>

    <string name="common_yuan">元</string>
    <string name="common_sure">确认</string>
    <string name="common_ok">好</string>
    <string name="common_cancle">取消</string>
    <string name="common_agree">同意"</string>
    <string name="common_rewrite">重写</string>
    <string name="common_back">返回</string>
    <string name="common_tips_title">提示</string>
    <!-- 提示信息 -->
    <string name="verifycode_empty_tips">请输入验证码</string>
    <string name="select_tips">请选择</string>

    <!-- 修改密码 -->
    <string name="str_reset_pwd">设置新密码</string>
    <string name="str_phone">手机号</string>
    <string name="str_verification_code">验证码</string>
    <string name="str_get_verification_code">获取验证码</string>
    <string name="str_new_pwd">新密码</string>
    <string name="str_change">修改</string>

    <!-- 启动首页 -->
    <string name="abook_start_title">好信用，不是说的</string>
    <string name="abook_start_register">@string/str_register</string>
    <string name="abook_start_login_tips">已有账号，直接登录</string>

    <!--登录注册 -->
    <string name="str_welcome">请用你的常用手机号注册</string>
    <string name="str_enter_mobile_number">请输入手机号</string>
    <string name="str_enter_verify_code">请输入短信验证码</string>
    <string name="hint_enter_verify_code">请输入验证码</string>
    <string name="hint_enter_register_phone">请输入注册手机号</string>
    <string name="srt_pwd_rule">"0123456789abcdefghijklnmopqrstuvwxyzABCDEFGHIJKLNMOPQRSTUVWXYZ"</string>
    <string name="srt_pwd_hint">请输入6-16位登录密码</string>
    <string name="str_register_pwd">密   码</string>
    <string name="str_register_invite">邀请码</string>
    <string name="str_register_inviteif"> 请输入邀请码(可不填)</string>
    <string name="str_nextstep">下一步，验证手机号码</string>
    <string name="str_agreement">点击“下一步，验证手机号”按钮，即表示你同意</string>
    <string name="str_credit_protocol">《好信用用户注册协议》</string>
    <string name="str_invalid_phone">请输入11位手机号</string>
    <string name="str_invalid_password">请输入6-16位密码</string>
    <string name="str_invalid_verification_code">请输入6位邀请码</string>
    <string name="str_invalid_verify_code">请输入验证码</string>
    <string name="hint_invalid_password">请输入登录密码</string>
    <string name="str_login_text">你的手机号已经注册，请直接登录</string>
    <string name="str_login">登录</string>
    <string name="str_register">注册</string>
    <string name="str_forget_pwd">忘记密码</string>

    <!--验证手机号 -->
    <string name="str_verify_title">验证码已经发送到你的手机</string>
    <string name="str_verify">验证</string>
    <string name="str_get_verification_code_again">再发一次吧</string>
    <string name="str_register_sucess">注册成功!</string>
    <string name="str_register_outdata">验证码已经过期，请重新获取</string>

    <!--认证手机 -->
    <string name="str_authentication">你有多少信用，你的信用值多少钱？</string>
    <string name="str_authentication_phone">请认证你的手机号</string>
    <string name="str_authentication_calculate">请认证你的手机号，维信金科实践十年的”蜂鸟算法“为你精准计算</string>
    <string name="str_authentication_phone_number">手机号码</string>
    <string name="str_authentication_server_pwd">服务密码</string>
    <string name="str_authentication_authorize">《运营商授权协议》</string>
    <string name="str_authentication_pwd_hint">请输入运营商服务密码</string>
    <string name="str_authentication_calculate_now">开始计算</string>
    <string name="str_authentication_yidong">请发送短信“CZMM”到10086 去修改密码</string>
    <string name="str_authentication_liantong">请发送短信"MMCZ#6位数字新密码”到10010</string>
    <string name="str_authentication_dianxin">电信：请发送短信“MMCZ#姓名#身份证号”到10001</string>
    <string name="str_authentication_unkown">对不起我们无法识别该号码的运营商，请反馈给我们，我们将尽快与您取得联系</string>
    <string name="str_authentication_dialog">你还未完成信用分计算，确认离开？</string>
    <string name="str_authentication_notcomplete">系统正在马不停蹄的计算，先进入看看</string>
    <string name="str_authentication_complete">信用分计算完成</string>


    <!-- 账单 -->
    <string name="tab_bill_title">账单</string>


    <!-- 信用 -->
    <string name="tab_credit_title">信用</string>


    <!-- 我的 -->
    <string name="tab_mine_title">我的</string>
</resources>
