<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/activity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_floating_material_light"
    android:orientation="vertical">

    <include
        android:id="@+id/iconfont_titlebar"
        layout="@layout/common_titlebar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        style="@style/tv_16_333"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:gravity="center"
        android:text="@string/str_welcome" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="50dp">

        <com.zhy.android.percent.support.PercentLinearLayout
            style="@style/login_layout_content" >

            <RelativeLayout style="@style/layout_reset_pwd">

                <ImageView
                    android:id="@+id/iv_icon"
                    android:layout_width="12dp"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/phone" />

                <TextView
                    android:id="@+id/tv_title"
                    style="@style/tv_14_66"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="12dp"
                    android:layout_toRightOf="@id/iv_icon"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:text="@string/str_phone" />


                <EditText
                    android:id="@+id/register_et_phone"
                    style="@style/tv_15_333"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:layout_toRightOf="@id/tv_title"
                    android:background="@color/transparent"
                    android:hint="@string/str_enter_mobile_number"
                    android:inputType="phone"
                    android:singleLine="true"
                    android:maxLength="11"
                    android:textColorHint="@color/font_hint_gray" />
            </RelativeLayout>

            <include
                style="@style/dividing_line_20"
                layout="@layout/common_dividing_line" />

            <RelativeLayout style="@style/layout_reset_pwd">

                <ImageView
                    android:id="@id/iv_icon"
                    android:layout_width="12dp"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/password" />

                <TextView
                    android:id="@id/tv_title"
                    style="@style/tv_14_66"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_toRightOf="@id/iv_icon"
                    android:text="@string/str_register_pwd" />

                <com.vcredit.view.PasswordView
                    android:id="@+id/register_et_password"
                    style="@style/tv_15_333"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:layout_toRightOf="@id/tv_title"
                    android:background="@color/transparent"
                    android:hint="@string/srt_pwd_hint"
                    android:longClickable="false"
                    android:maxLength="16"
                    android:textColorHint="@color/font_hint_gray" />
            </RelativeLayout>

            <include
                style="@style/dividing_line_20"
                layout="@layout/common_dividing_line" />

            <RelativeLayout style="@style/layout_reset_pwd">

                <ImageView
                    android:id="@id/iv_icon"
                    android:layout_width="12dp"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/invitation_code" />

                <TextView
                    android:id="@id/tv_title"
                    style="@style/tv_14_66"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="12dp"
                    android:layout_toRightOf="@id/iv_icon"
                    android:text="@string/str_register_invite" />

                <EditText
                    android:id="@+id/register_et_invitecode"
                    style="@style/tv_15_333"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:singleLine="true"
                    android:layout_toRightOf="@id/tv_title"
                    android:background="@color/transparent"
                    android:hint="@string/str_register_inviteif"
                    android:inputType="text"
                    android:textColorHint="@color/font_hint_gray" />

            </RelativeLayout>


            <Button
                android:id="@+id/btn_next_step"
                style="@style/btn_style_1"
                android:layout_width="200dp"
                android:layout_height="40dp"
                android:layout_marginTop="60dp"
                android:text="@string/str_nextstep" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="100dp">

                <TextView
                    android:id="@id/tv_title"
                    style="@style/tv_14_66"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="12dp"
                    android:text="@string/str_agreement" />

                <TextView
                    android:id="@+id/tv_credit_protocol"
                    style="@style/tv_12_66a8ee"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tv_title"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="3dp"
                    android:text="@string/str_credit_protocol" />

            </RelativeLayout>
        </com.zhy.android.percent.support.PercentLinearLayout>
    </ScrollView>
</LinearLayout>