<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/activity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include
        android:id="@+id/iconfont_titlebar"
        layout="@layout/common_titlebar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        style="@style/tv_16_333"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:gravity="center"
        android:text="@string/str_verify_title" />

    <TextView
        android:id="@+id/tv_phonenum"
        style="@style/tv_16_333"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:gravity="center" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="50dp">

        <com.zhy.android.percent.support.PercentLinearLayout
            style="@style/login_layout_content" >


            <RelativeLayout style="@style/layout_reset_pwd">

                <TextView
                    android:id="@+id/tv_title"
                    style="@style/tv_14_66"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="12dp"
                    android:text="@string/str_verification_code" />

                <EditText
                    android:id="@+id/et_verification_code"
                    style="@style/tv_15_333"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:singleLine="true"
                    android:layout_toLeftOf="@+id/btn_dynamic_getCode"
                    android:layout_toRightOf="@id/tv_title"
                    android:background="@color/transparent" />

                <Button
                    android:id="@+id/btn_dynamic_getCode"
                    style="@style/tv_12_66a8ee"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:background="@color/bg_main"
                    android:enabled="false"
                    android:text="@string/str_get_verification_code_again" />
            </RelativeLayout>

            <include
                style="@style/dividing_line_20"
                layout="@layout/common_dividing_line" />

            <Button
                android:id="@+id/btn_verify"
                style="@style/btn_style_1"
                android:layout_width="250dp"
                android:layout_height="40dp"
                android:layout_marginTop="30dp"
                android:text="@string/str_verify" />

        </com.zhy.android.percent.support.PercentLinearLayout>
    </ScrollView>

</LinearLayout>